fix: fix post navigation bug on mobile mode

--- a/include/style/article.styl
+++ b/include/style/article.styl
@@ -56,6 +56,7 @@ article
             text-align: center
             margin-top: 1.5rem
             font-weight: bold
+            line-height: 1.5
 
         .article-meta, .article-tags
             color: $text-light
